fix get_conn_num() function and fix bug529

--- a/maxscale-system-test/mdbci/templates/docker.json.template
+++ b/maxscale-system-test/mdbci/templates/docker.json.template
@@ -69,7 +69,7 @@
                 "MAXSCALE"
         ],
         "product" : {
-                 "name" : "maxscale",
+                 "name" : "maxscale_ci",
                 "version" : "${target}"
         }
 
@@ -83,7 +83,7 @@
                 "SECOND_MAXSCALE"
         ],
         "product" : {
-                "name" : "maxscale",
+                "name" : "maxscale_ci",
                 "version" : "${target}"
         }
 
