use big VM for tests

--- a/maxscale-system-test/mdbci/templates/default.json.template
+++ b/maxscale-system-test/mdbci/templates/default.json.template
@@ -4,6 +4,7 @@
         "hostname" : "node000",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "REPL_BACKEND"
         ],
@@ -21,6 +22,7 @@
         "hostname" : "node001",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "REPL_BACKEND"
         ],
@@ -37,6 +39,7 @@
         "hostname" : "node002",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "REPL_BACKEND"
         ],
@@ -53,6 +56,7 @@
         "hostname" : "node003",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "REPL_BACKEND"
         ],
@@ -69,6 +73,7 @@
         "hostname" : "node004",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -85,6 +90,7 @@
         "hostname" : "node005",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -101,6 +107,7 @@
         "hostname" : "node006",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -117,6 +124,7 @@
         "hostname" : "node007",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -132,7 +140,9 @@
   {
         "hostname" : "node008",
         "box" : "${backend_box}",
+        "cpu_count" : "8",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -149,6 +159,7 @@
         "hostname" : "node009",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -165,6 +176,7 @@
         "hostname" : "node010",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -181,6 +193,7 @@
         "hostname" : "node011",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -197,6 +210,7 @@
         "hostname" : "node012",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -213,6 +227,7 @@
         "hostname" : "node013",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -229,6 +244,7 @@
         "hostname" : "node013",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "BIG_REPL_BACKEND"
         ],
@@ -245,6 +261,7 @@
         "hostname" : "galera000",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "GALERA_BACKEND"
         ],
@@ -261,6 +278,7 @@
         "hostname" : "galera001",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "GALERA_BACKEND"
         ],
@@ -277,6 +295,7 @@
         "hostname" : "galera002",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "GALERA_BACKEND"
         ],
@@ -293,6 +312,7 @@
         "hostname" : "galera003",
         "box" : "${backend_box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "GALERA_BACKEND"
         ],
@@ -309,6 +329,7 @@
         "hostname" : "maxscale",
         "box" : "${box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "MAXSCALE"
         ],
@@ -324,6 +345,7 @@
         "hostname" : "maxscale2",
         "box" : "${box}",
         "memory_size" : "${vm_memory}",
+        "cpu_count" : "8",
         "labels" : [
                 "SECOND_MAXSCALE"
         ],
